logs/quintagroup.slidertemplates.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/portlet'...
Listing './lib/python3.5/site-packages/collective/portlet/ngcollection'...
Listing './lib/python3.5/site-packages/collective/portlet/ngcollection/locales'...
Listing './lib/python3.5/site-packages/collective/portlet/ngcollection/locales/da'...
Listing './lib/python3.5/site-packages/collective/portlet/ngcollection/locales/da/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/portlet/ngcollection/locales/fr'...
Listing './lib/python3.5/site-packages/collective/portlet/ngcollection/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/portlet/ngcollection/locales/uk'...
Listing './lib/python3.5/site-packages/collective/portlet/ngcollection/locales/uk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/portlet/ngcollection/profiles'...
Listing './lib/python3.5/site-packages/collective/portlet/ngcollection/profiles/default'...
Listing './lib/python3.5/site-packages/collective/portlet/ngcollection/tests'...
Listing './lib/python3.5/site-packages/collective/portlet/ngcollection/tests/templates'...
Compiling './lib/python3.5/site-packages/collective/portlet/ngcollection/vocabularies.py'...
***   File "./lib/python3.5/site-packages/collective/portlet/ngcollection/vocabularies.py", line 35
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective.portlet.ngcollection-1.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/quintagroup'...
Listing './lib/python3.5/site-packages/quintagroup/slidertemplates'...
Listing './lib/python3.5/site-packages/quintagroup/slidertemplates/browser'...
Listing './lib/python3.5/site-packages/quintagroup/slidertemplates/browser/static'...
Listing './lib/python3.5/site-packages/quintagroup/slidertemplates/browser/static/css'...
Listing './lib/python3.5/site-packages/quintagroup/slidertemplates/browser/static/js'...
Listing './lib/python3.5/site-packages/quintagroup/slidertemplates/browser/templates'...
Listing './lib/python3.5/site-packages/quintagroup/slidertemplates/profiles'...
Listing './lib/python3.5/site-packages/quintagroup/slidertemplates/profiles/default'...
Listing './lib/python3.5/site-packages/quintagroup/slidertemplates/profiles/uninstall'...
Listing './lib/python3.5/site-packages/quintagroup.slidertemplates-1.5.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
